[gd_scene load_steps=22 format=3 uid="uid://cnotxnjbhrj4a"]

[ext_resource type="Script" uid="uid://dxicgx2v6rcda" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="Script" uid="uid://c3nebth5qx3wg" path="res://scripts/camera_3d.gd" id="1_yqjtg"]
[ext_resource type="ArrayMesh" uid="uid://ntp7v0mg3pja" path="res://assets/models/arrow.obj" id="3_0tnpc"]
[ext_resource type="Script" uid="uid://hp28h00nhtj6" path="res://scripts/arrow.gd" id="4_vtaks"]
[ext_resource type="PackedScene" uid="uid://cyg2e5xslvje3" path="res://scenes/asteroids/asteroid_manager.tscn" id="5_p57ef"]
[ext_resource type="Script" uid="uid://dti8u68m46th2" path="res://scripts/managers/timer_manager.gd" id="6_ca42v"]
[ext_resource type="PackedScene" uid="uid://cdbqn35l6oxha" path="res://scenes/managers/ui_manager.tscn" id="7_kvpfn"]
[ext_resource type="Shader" uid="uid://diyt4cx0hnlnl" path="res://assets/shader/space-visual-shader.tres" id="13_kvuet"]
[ext_resource type="Texture2D" uid="uid://x563xgobc7qq" path="res://assets/space/t-space-01.png" id="14_ir15t"]
[ext_resource type="PackedScene" uid="uid://bn6hjlre2x7cy" path="res://scenes/managers/mission_manager.tscn" id="14_trtic"]
[ext_resource type="Texture2D" uid="uid://2kf05jtnku8b" path="res://assets/space/t-space-03.png" id="15_ca42v"]
[ext_resource type="Texture2D" uid="uid://bprqkumf86jbq" path="res://assets/space/t-space-02.png" id="15_ir15t"]
[ext_resource type="PackedScene" uid="uid://b2w72cu2g8cky" path="res://scenes/managers/ship_manager.tscn" id="19_264po"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vtaks"]
transparency = 1
depth_draw_mode = 1
albedo_color = Color(0.329412, 1, 0.564706, 0.290196)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_80nbo"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_e2o6t"]
sky_material = SubResource("ProceduralSkyMaterial_80nbo")

[sub_resource type="Environment" id="Environment_feb5d"]
background_mode = 2
sky = SubResource("Sky_e2o6t")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_dinhu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_trtic"]
render_priority = 0
shader = ExtResource("13_kvuet")
shader_parameter/Speed = -0.005
shader_parameter/Scale = 256.0
shader_parameter/Texture2DParameter2 = ExtResource("14_ir15t")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rysoc"]
render_priority = 0
shader = ExtResource("13_kvuet")
shader_parameter/Speed = 0.005
shader_parameter/Scale = 256.0
shader_parameter/Texture2DParameter2 = ExtResource("15_ca42v")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ca42v"]
render_priority = 0
shader = ExtResource("13_kvuet")
shader_parameter/Speed = 0.005
shader_parameter/Scale = 256.0
shader_parameter/Texture2DParameter2 = ExtResource("15_ir15t")

[node name="Game" type="Node"]
script = ExtResource("1_lnu2h")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
current = true
script = ExtResource("1_yqjtg")
smooth_speed = 3.5

[node name="Arrow" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.025, -1, 0.55, -1)
mesh = ExtResource("3_0tnpc")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_vtaks")
script = ExtResource("4_vtaks")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 2.12011, 5.03893, -4.67931)
light_cull_mask = 4294967279
shadow_enabled = true
shadow_caster_mask = 4294967279

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_feb5d")

[node name="AsteroidManager" parent="." instance=ExtResource("5_p57ef")]
unique_name_in_owner = true

[node name="TimerManager" type="Node" parent="."]
script = ExtResource("6_ca42v")

[node name="FuelTimer" type="Timer" parent="TimerManager"]
wait_time = 5.0
autostart = true

[node name="ActiveItemMoneyTimer" type="Timer" parent="TimerManager"]
wait_time = 0.1

[node name="UIManager" parent="." instance=ExtResource("7_kvpfn")]
unique_name_in_owner = true

[node name="ShipManager" parent="." instance=ExtResource("19_264po")]
unique_name_in_owner = true

[node name="MissionManager" parent="." instance=ExtResource("14_trtic")]
unique_name_in_owner = true

[node name="BankLoaderMain" type="FmodBankLoader" parent="."]
bank_paths = ["res://PropGames/Build/Desktop/Master.strings.bank", "res://PropGames/Build/Desktop/Master.bank", "res://PropGames/Build/Desktop/UI+Station_SFX.bank", "res://PropGames/Build/Desktop/ShipSFX.bank", "res://PropGames/Build/Desktop/MusicMain.bank"]

[node name="ShipListener" type="FmodListener3D" parent="."]

[node name="SpaceLowest" type="MeshInstance3D" parent="."]
transform = Transform3D(2048, 0, 0, 0, 2048, 0, 0, 0, 2048, 0, -256, 0)
mesh = SubResource("PlaneMesh_dinhu")
surface_material_override/0 = SubResource("ShaderMaterial_trtic")

[node name="SpaceMiddle" type="MeshInstance3D" parent="."]
transform = Transform3D(2048, 0, 0, 0, 2048, 0, 0, 0, 2048, 0, -96, 0)
mesh = SubResource("PlaneMesh_dinhu")
surface_material_override/0 = SubResource("ShaderMaterial_rysoc")

[node name="SpaceUpper" type="MeshInstance3D" parent="."]
transform = Transform3D(2048, 0, 0, 0, 2048, 0, 0, 0, 2048, 0, -48, 0)
mesh = SubResource("PlaneMesh_dinhu")
surface_material_override/0 = SubResource("ShaderMaterial_ca42v")

[connection signal="timeout" from="TimerManager/FuelTimer" to="." method="_on_fuel_timer_timeout"]
[connection signal="timeout" from="TimerManager/ActiveItemMoneyTimer" to="." method="_on_active_item_money_timer_timeout"]
[connection signal="on_contract_accept" from="UIManager" to="." method="_on_ui_manager_on_contract_accept"]
[connection signal="on_death_scene_next_run" from="UIManager" to="." method="_on_ui_manager_on_death_scene_next_run"]
[connection signal="on_mission_finished_popup_button_pressed" from="UIManager" to="." method="_on_ui_manager_on_mission_finished_popup_button_pressed"]
[connection signal="on_shop_mission_interfaces_start_mission" from="UIManager" to="." method="_on_ui_manager_on_shop_mission_interfaces_start_mission"]
[connection signal="on_start_run" from="UIManager" to="." method="_on_ui_manager_on_start_run"]
[connection signal="purchased_item" from="UIManager" to="." method="_on_ui_manager_purchased_item"]
[connection signal="ship_fly" from="UIManager" to="." method="_on_ui_manager_ship_fly"]
[connection signal="activate_active_item" from="ShipManager" to="." method="_on_ship_manager_activate_active_item"]
[connection signal="deactivate_active_item" from="ShipManager" to="." method="_on_ship_manager_deactivate_active_item"]
[connection signal="ship_died" from="ShipManager" to="." method="_on_ship_manager_ship_died"]
[connection signal="enter_base" from="MissionManager" to="." method="_on_mission_manager_enter_base"]
[connection signal="finish_mission" from="MissionManager" to="." method="_on_mission_manager_finish_mission"]
